# tramalia

./: .gitattributes  .gitignore  .gitleaks.toml  404.html  AVISOS_TERCEROS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSES.md  MANUAL_DE_USUARIO.md  NOTICE  README.en.md  README.es.md  README.md  Tramalia_Diseno_Consolidado_v0_6.md  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-docs.txt  sitemap.xml
.claude/: launch.json
.github/: FUNDING.yml
.github/workflows/: docs-offline.yml  docs.yml  publish.yml  validacion.yml
adopcion/: index.html
analitica/: index.html
arquitectura/: index.html
ayuda/: index.html
comandos/: index.html
como-trabaja-ia/: index.html
configuracion/: lighthouse.cjs  playwright.mjs
configuracion/semgrep/: seguridad-python.yml
docs/: adopcion.en.md  adopcion.md  analitica.en.md  analitica.md  arquitectura.en.md  arquitectura.md  ayuda.en.md  ayuda.md  comandos.en.md  comandos.md  como-trabaja-ia.en.md  como-trabaja-ia.md  ecosistema.en.md  ecosistema.md  ejemplo-completo.en.md  ejemplo-completo.md  flujo-completo.en.md  flujo-completo.md  glosario.en.md  glosario.md  herramientas.en.md  herramientas.md  index.en.md  index.md  instalacion.en.md  instalacion.md  interfaz.en.md  interfaz.md  interop-agentes.en.md  interop-agentes.md  interop-contexto.en.md  interop-contexto.md  interop-ejecucion.en.md  interop-ejecucion.md  interop-memoria.en.md  interop-memoria.md  interop.en.md  interop.md  multi-host.en.md  multi-host.md  (+4 more)
docs/javascripts/: accesibilidad_teclado.js
docs/overrides/partials/: search.html
docs/seguridad/: excepciones-gitleaks.md  matriz-controles.md  modelo-amenazas.md
docs/stylesheets/: extra.css
docs/superpowers/plans/: 2026-07-12-01-base-pruebas-ci.md  2026-07-12-02-nucleo-puertas-evidencia.md  2026-07-12-03-integraciones-superficies-tui.md  2026-07-12-04-documentacion-lanzamientos.md  2026-07-14-03a-seguridad-calidad-superficies.md  2026-07-14-03b-rediseno-cli-tui-interactiva.md  2026-07-16-03c-habilidades-gobernadas.md  2026-07-16-05a-motor-recetas.md
docs/superpowers/specs/: 2026-07-12-tramalia-beta-stabilization-design.md  2026-07-14-rediseno-cli-tui-interactiva-design.md  2026-07-16-habilidades-relanzamiento-v1-diseno.md  2026-07-16-plan-05-recetas-auditoria-remediacion-diseno.md
ecosistema/: index.html
ejemplo-completo/: index.html
en/: index.html
en/adopcion/: index.html
en/analitica/: index.html
en/arquitectura/: index.html
en/ayuda/: index.html
en/comandos/: index.html
en/como-trabaja-ia/: index.html
en/ecosistema/: index.html
en/ejemplo-completo/: index.html
en/flujo-completo/: index.html
en/glosario/: index.html
en/herramientas/: index.html
en/instalacion/: index.html
en/interfaz/: index.html
en/interop/: index.html
en/interop-agentes/: index.html
en/interop-contexto/: index.html
en/interop-ejecucion/: index.html
en/interop-memoria/: index.html
en/multi-host/: index.html
en/patrones-arquitectura/: index.html
en/skills-guia/: index.html
flujo-completo/: index.html
glosario/: index.html
herramientas/: index.html
instalacion/: index.html
interfaz/: index.html
interop/: index.html
interop-agentes/: index.html
interop-contexto/: index.html
interop-ejecucion/: index.html
interop-memoria/: index.html
multi-host/: index.html
patrones-arquitectura/: index.html
pruebas/ux/: documentacion.spec.mjs  entorno_capturas.test.mjs  servidor_documentacion.test.mjs
scripts/: absolutizar_alternativas.py  build_offline_docs.py  generar_proyecto_prueba_seguridad.py  instalar_gitleaks.py  servir_documentacion.mjs  verificar_aprobacion_capturas_ux.mjs
search/: search_index.json
skills-guia/: index.html
tests/: AUDITORIA.md  README.md  conftest.py  test_agentes_modelo.py  test_comandos_simples.py  test_context.py  test_convencion_completa.py  test_detect.py  test_doctor.py  test_engram.py  test_evidence_handoff.py  test_governance.py  test_headroom.py  test_instalacion_unificada.py  test_mcp.py  test_metadata.py  test_scaffold.py  test_speckit_ui.py  test_tools_and_skills.py  test_v012.py  test_v013.py  test_v014.py  test_v015.py  test_v016.py  test_v017.py  test_v018.py  test_v019.py  test_v020.py  test_v021.py  test_v021b.py  test_v022.py  test_v023.py  test_v024.py  test_v025.py  test_v026.py  test_v027.py  test_v028.py  test_v029.py  test_v030.py  test_v031.py  (+1 more)
tests/contratos/: test_flujo_validacion.py  test_metadatos_evidencia_v1.py  test_metadatos_proyecto.py  test_modelo_seguridad.py  test_nombres_espanol.py  test_operaciones_superficies.py  test_puertas_generadas.py  test_readme_estado.py  test_seguridad_estatica.py
tests/integracion/: test_evidencia_atomica.py  test_habilidades_git.py  test_habilidades_seguras.py  test_mcp_operaciones.py  test_mcp_seguridad.py  test_operaciones.py  test_traspaso_bitacora.py
tests/interfaz/: test_interfaz_terminal.py
tests/recursos/semgrep/: inseguro.py
tests/seguridad/: test_ejecucion_procesos.py
tests/unidad/: test_configuracion.py  test_errores_modelos.py  test_identidad_evidencia.py  test_instalador_gitleaks.py  test_integraciones.py  test_metricas_cierre.py  test_politica_cierre.py  test_proyecto_gobernado.py  test_puertas_calidad.py  test_seguridad_entradas.py  test_tablero.py
tramalia/: __init__.py  __main__.py  interfaz_terminal.py  mcp_server.py  tui.py
tramalia/cli/: comandos.py  commands.py  menu.py  render.py  renderizado.py
tramalia/core/: configuracion.py  context.py  context_backend.py  contexto.py  detect.py  doctor.py  errores.py  evidence.py  evidencia.py  governance.py  habilidades.py  handoff.py  installer.py  integraciones.py  model_cap.py  modelos.py  operaciones.py  politica_cierre.py  proc.py  procesos.py  project.py  proveedor_contexto.py  proyecto.py  puertas_calidad.py  scaffold.py  seguridad_entradas.py  skills.py  tablero.py  tools.py  traspaso.py  versiones_herramientas.py
tramalia/i18n/: __init__.py  en.json  es.json
tramalia/templates/project/: AGENTS.md.jinja  CLAUDE.md.jinja
(+54 files in other folders)
