[project]
name = "tramalia-cli"
version = "0.33.0"
description = "Capa repo-first de gobierno y evidencia para desarrollo con múltiples agentes IA (reglas, gates, evidence pack, handoff y auditoría)."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Michael Jim Scott Bravo" }]
keywords = ["ai", "agents", "cli", "agents.md", "mise", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]
# Rich y Questionary son puras-Python y diminutas: van incluidas para que
# `pip install tramalia-cli` dé la experiencia recomendada de una vez.
# El núcleo igual degrada a stdlib si faltan (--plain / entornos mínimos).
dependencies = ["rich>=13", "questionary>=2"]

[project.urls]
Homepage = "https://mscottb.github.io/tramalia/"
Documentation = "https://mscottb.github.io/tramalia/"
Repository = "https://github.com/MscottB/tramalia"
Changelog = "https://github.com/MscottB/tramalia/blob/main/CHANGELOG.md"
Issues = "https://github.com/MscottB/tramalia/issues"

# tui y mcp son más pesadas y genuinamente opcionales; `tramalia ui`/`tramalia mcp`
# ofrecen instalarlas al primer uso. `pretty` queda como alias vacío (compatibilidad).
[project.optional-dependencies]
pretty = []
mcp = ["mcp>=1.2"]
tui = ["textual>=1.0"]
full = ["mcp>=1.2", "textual>=1.0"]
dev = ["pytest>=8", "mcp>=1.2", "textual>=1.0"]

[project.scripts]
tramalia = "tramalia.__main__:main"

[dependency-groups]
desarrollo = [
    "pytest>=8",
    "pytest-cov>=6",
    "pytest-timeout>=2",
    "pytest-repeat>=0.9",
    "ruff>=0.12",
    "mypy>=1.16",
    "build>=1.2",
    "twine>=6",
]
seguridad = [
    "actionlint-py==1.7.12.24",
    "semgrep==1.169.0",
]

[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tramalia"]
# plantillas y catálogos i18n son datos del paquete: deben ir dentro del wheel
artifacts = ["tramalia/templates/**/*", "tramalia/i18n/*.json"]

[tool.hatch.build.targets.sdist]
include = ["tramalia", "tests", "README.md", "Tramalia_Diseno_Consolidado_v0_6.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "--strict-config"]
timeout = 60
timeout_method = "thread"
markers = [
    "unidad: logica pura y rapida",
    "contrato: formatos, scaffold y superficies publicas",
    "integracion: filesystem, Git, procesos y cierre",
    "interfaz: flujos publicos de Textual",
    "opcional: requiere extras TUI o MCP",
    "publicacion: wheel, metadata y smoke de release",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["site", ".worktrees"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # El formateador aplica 100 columnas; no rompe URLs ni mensajes largos.
